Change styling of font to remove flicker; Fixing gitignore

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -15,6 +15,9 @@ body {
 h1 {
   font-size: 4rem;
   padding: 2%;
+  margin-top: 2%;
+  font-weight: bolder;
+  letter-spacing: 5px;
 }
 
 /**** VARIABLES ****/
@@ -37,11 +40,13 @@ $gameBorder: 5px solid #FFC107;
 
 div.main-game-div,
   h1 {
-  font-family: averia-sans-libre, sans-serif;
+  // font-family: averia-sans-libre, sans-serif;
+  // font-family: 'Sedgwick Ave Display', cursive;
+  font-family: 'Indie Flower', cursive;
 }
 
 div.main-game-div {
-  padding: 5%;  
+  padding: 5%;
 }
 
 .square {
